--- a/app/src/main/res/layout/cadastro_fragment.xml
+++ b/app/src/main/res/layout/cadastro_fragment.xml
@@ -7,37 +7,20 @@
     android:background="@color/whiteOnShop">
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/textInputLayout"
-        android:layout_width="match_parent"
+        android:id="@+id/textInputLayout2"
+        android:layout_width="0dp"
         android:layout_height="60dp"
         android:layout_marginStart="32dp"
         android:layout_marginTop="36dp"
         android:layout_marginEnd="32dp"
-        android:hint="Nome"
+        android:hint="E-mail"
         app:endIconMode="clear_text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar_cadastro">
+        app:layout_constraintTop_toBottomOf="@+id/textInputEditText">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:layout_width="match_parent"
-            android:layout_height="60dp"
-            android:backgroundTint="#FFFFFF"
-            android:textSize="18sp" />
-    </com.google.android.material.textfield.TextInputLayout>
-
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/textInputLayout2"
-        android:layout_width="0dp"
-        android:layout_height="60dp"
-        android:layout_marginTop="32dp"
-        android:hint="E-mail"
-        app:endIconMode="clear_text"
-        app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
-        app:layout_constraintStart_toStartOf="@+id/textInputLayout"
-        app:layout_constraintTop_toBottomOf="@+id/textInputLayout">
-
-        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/campo_email_cadastrar"
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:backgroundTint="#FFFFFF"
@@ -45,6 +28,7 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputEditText
+        android:id="@+id/textInputEditText"
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:backgroundTint="#FFFFFF"
@@ -65,6 +49,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textInputLayout2">
 
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/campo_senha_cadastrar"
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:backgroundTint="#FFFFFF"
@@ -86,6 +71,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textInputLayout3">
 
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/campo_confirmar_senha_cadastrar"
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:backgroundTint="#FFFFFF"
