Início da construção da home: tabLayout, recyclerView e itens genéricos.

--- a/app/src/main/res/layout/home_activity.xml
+++ b/app/src/main/res/layout/home_activity.xml
@@ -25,5 +25,5 @@
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
-      app:menu="@menu/menu"/>
+      app:menu="@menu/menu_botton_navigation"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
