Implementação erro de login.

--- a/app/src/main/res/layout/login_fragment.xml
+++ b/app/src/main/res/layout/login_fragment.xml
@@ -28,39 +28,62 @@
         app:layout_constraintTop_toBottomOf="@+id/imageView3">
 
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/layout_campo_email"
+            android:id="@+id/login_campo_email"
             android:layout_width="match_parent"
-            android:layout_height="60dp"
-            android:layout_marginStart="32dp"
-            android:layout_marginTop="60dp"
-            android:layout_marginEnd="32dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginEnd="24dp"
+            android:inputType="textEmailAddress"
             android:hint="E-mail"
-            app:endIconMode="clear_text"
+            app:boxStrokeColor="@color/blueOnShop"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            app:layout_constraintTop_toTopOf="parent">>
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/campo_email"
                 android:layout_width="match_parent"
-                android:layout_height="60dp"
-                android:backgroundTint="#FFFFFF"
-                android:inputType="textEmailAddress"
-                android:textSize="18sp" />
+                android:layout_height="wrap_content"
+                android:background="@color/white"
+                android:inputType="textEmailAddress" />
 
         </com.google.android.material.textfield.TextInputLayout>
+
+<!--        <com.google.android.material.textfield.TextInputLayout-->
+<!--            android:id="@+id/layout_campo_email"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="60dp"-->
+<!--            android:layout_marginStart="32dp"-->
+<!--            android:layout_marginTop="60dp"-->
+<!--            android:layout_marginEnd="32dp"-->
+<!--            android:hint="E-mail"-->
+<!--            app:endIconMode="clear_text"-->
+<!--            app:layout_constraintEnd_toEndOf="parent"-->
+<!--            app:layout_constraintStart_toStartOf="parent"-->
+<!--            app:layout_constraintTop_toTopOf="parent">-->
+
+<!--            <com.google.android.material.textfield.TextInputEditText-->
+<!--                android:id="@+id/campo_email"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="60dp"-->
+<!--                android:backgroundTint="#FFFFFF"-->
+<!--                android:inputType="textEmailAddress"-->
+<!--                android:textSize="18sp" />-->
+
+<!--        </com.google.android.material.textfield.TextInputLayout>-->
 
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/textInputLayout2"
             android:layout_width="0dp"
             android:layout_height="60dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="32dp"
             android:hint="Insira sua senha"
             app:endIconMode="password_toggle"
-            app:layout_constraintEnd_toEndOf="@+id/layout_campo_email"
-            app:layout_constraintStart_toStartOf="@+id/layout_campo_email"
-            app:layout_constraintTop_toBottomOf="@+id/layout_campo_email">
+            app:layout_constraintEnd_toEndOf="@+id/login_campo_email"
+            app:layout_constraintStart_toStartOf="@+id/login_campo_email"
+            app:layout_constraintTop_toBottomOf="@+id/login_campo_email">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/campo_senha"
