--- a/app/src/main/res/layout/cadastro_fragment.xml
+++ b/app/src/main/res/layout/cadastro_fragment.xml
@@ -6,27 +6,6 @@
     android:layout_height="match_parent"
     android:background="@color/whiteOnShop">
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/textInputLayout2"
-        android:layout_width="0dp"
-        android:layout_height="60dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="36dp"
-        android:layout_marginEnd="32dp"
-        android:hint="E-mail"
-        app:endIconMode="clear_text"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textInputEditText">
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/campo_email_cadastrar"
-            android:layout_width="match_parent"
-            android:layout_height="60dp"
-            android:backgroundTint="#FFFFFF"
-            android:textSize="18sp" />
-    </com.google.android.material.textfield.TextInputLayout>
-
     <com.google.android.material.textfield.TextInputEditText
         android:id="@+id/textInputEditText"
         android:layout_width="match_parent"
@@ -38,40 +17,42 @@
     </com.google.android.material.textfield.TextInputEditText>
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/textInputLayout3"
-        android:layout_width="0dp"
-        android:layout_height="60dp"
-        android:layout_marginTop="32dp"
-        android:hint="Senha"
-        app:endIconMode="password_toggle"
-        app:layout_constraintEnd_toEndOf="@+id/textInputLayout2"
-        app:layout_constraintStart_toStartOf="@+id/textInputLayout2"
-        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2">
+        android:id="@+id/cadastro_campo_email"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="36dp"
+        android:layout_marginEnd="32dp"
+        android:hint="E-mail"
+        android:inputType="textEmailAddress"
+        app:boxStrokeColor="@color/blueOnShop"
+        app:endIconMode="clear_text"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textInputEditText">>
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/campo_senha_cadastrar"
+            android:id="@+id/campo_email_cadastro"
             android:layout_width="match_parent"
-            android:layout_height="60dp"
-            android:backgroundTint="#FFFFFF"
-            android:inputType="textPassword"
-            android:textSize="18sp">
+            android:layout_height="wrap_content"
+            android:background="@color/white"
+            android:inputType="textEmailAddress" />
 
-        </com.google.android.material.textfield.TextInputEditText>
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/textInputLayout4"
+        android:id="@+id/cadastro_campo_senha"
         android:layout_width="0dp"
-        android:layout_height="60dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
-        android:hint="Confirmar senha"
+        android:hint="Nova senha"
         app:endIconMode="password_toggle"
-        app:layout_constraintEnd_toEndOf="@+id/textInputLayout3"
-        app:layout_constraintStart_toStartOf="@+id/textInputLayout3"
-        app:layout_constraintTop_toBottomOf="@+id/textInputLayout3">
+        app:layout_constraintEnd_toEndOf="@+id/cadastro_campo_email"
+        app:layout_constraintStart_toStartOf="@+id/cadastro_campo_email"
+        app:layout_constraintTop_toBottomOf="@+id/cadastro_campo_email">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/campo_confirmar_senha_cadastrar"
+            android:id="@+id/campo_senha_cadastro"
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:backgroundTint="#FFFFFF"
@@ -81,6 +62,96 @@
         </com.google.android.material.textfield.TextInputEditText>
 
     </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/cadastro_campo_confirmar_senha"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
+        android:hint="Confirmar senha"
+        app:endIconMode="password_toggle"
+        app:layout_constraintEnd_toEndOf="@+id/cadastro_campo_senha"
+        app:layout_constraintStart_toStartOf="@+id/cadastro_campo_senha"
+        app:layout_constraintTop_toBottomOf="@+id/cadastro_campo_senha">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/campo_senha_confirmar_cadastro"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:backgroundTint="#FFFFFF"
+            android:inputType="textPassword"
+            android:textSize="18sp">
+
+        </com.google.android.material.textfield.TextInputEditText>
+
+    </com.google.android.material.textfield.TextInputLayout>
+<!--    <com.google.android.material.textfield.TextInputLayout-->
+<!--        android:id="@+id/email_cadastrar"-->
+<!--        android:layout_width="0dp"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_marginStart="32dp"-->
+<!--        android:layout_marginTop="36dp"-->
+<!--        android:layout_marginEnd="32dp"-->
+<!--        android:hint="E-mail"-->
+<!--        app:endIconMode="clear_text"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintTop_toBottomOf="@+id/textInputEditText">-->
+
+<!--        <com.google.android.material.textfield.TextInputEditText-->
+<!--            android:id="@+id/campo_email_cadastrar"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="60dp"-->
+<!--            android:backgroundTint="#FFFFFF"-->
+<!--            android:textSize="18sp" />-->
+<!--    </com.google.android.material.textfield.TextInputLayout>-->
+
+
+
+<!--    <com.google.android.material.textfield.TextInputLayout-->
+<!--        android:id="@+id/senha_cadastrar"-->
+<!--        android:layout_width="0dp"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_marginTop="32dp"-->
+<!--        android:hint="Senha"-->
+<!--        app:endIconMode="password_toggle"-->
+<!--        app:layout_constraintEnd_toEndOf="@+id/email_cadastrar"-->
+<!--        app:layout_constraintStart_toStartOf="@+id/email_cadastrar"-->
+<!--        app:layout_constraintTop_toBottomOf="@+id/email_cadastrar">-->
+
+<!--        <com.google.android.material.textfield.TextInputEditText-->
+<!--            android:id="@+id/campo_senha_cadastrar"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="60dp"-->
+<!--            android:backgroundTint="#FFFFFF"-->
+<!--            android:inputType="textPassword"-->
+<!--            android:textSize="18sp">-->
+
+<!--        </com.google.android.material.textfield.TextInputEditText>-->
+<!--    </com.google.android.material.textfield.TextInputLayout>-->
+
+<!--    <com.google.android.material.textfield.TextInputLayout-->
+<!--        android:id="@+id/senha_confirmar"-->
+<!--        android:layout_width="0dp"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_marginTop="32dp"-->
+<!--        android:hint="Confirmar senha"-->
+<!--        app:endIconMode="password_toggle"-->
+<!--        app:layout_constraintEnd_toEndOf="@+id/senha_cadastrar"-->
+<!--        app:layout_constraintStart_toStartOf="@+id/senha_cadastrar"-->
+<!--        app:layout_constraintTop_toBottomOf="@+id/senha_cadastrar">-->
+
+<!--        <com.google.android.material.textfield.TextInputEditText-->
+<!--            android:id="@+id/campo_confirmar_senha_cadastrar"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="60dp"-->
+<!--            android:backgroundTint="#FFFFFF"-->
+<!--            android:inputType="textPassword"-->
+<!--            android:textSize="18sp">-->
+
+<!--        </com.google.android.material.textfield.TextInputEditText>-->
+
+<!--    </com.google.android.material.textfield.TextInputLayout>-->
 
     <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
         android:id="@+id/bt_cadastrar"
@@ -92,9 +163,9 @@
         android:textColor="@color/white"
         android:textSize="14sp"
         android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="@+id/textInputLayout4"
-        app:layout_constraintStart_toStartOf="@+id/textInputLayout4"
-        app:layout_constraintTop_toBottomOf="@+id/textInputLayout4" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/cadastro_campo_confirmar_senha" />
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar_cadastro"
