--- a/app/src/main/res/layout/login_fragment.xml
+++ b/app/src/main/res/layout/login_fragment.xml
@@ -36,6 +36,7 @@
             android:layout_marginEnd="24dp"
             android:inputType="textEmailAddress"
             android:hint="E-mail"
+            app:endIconMode="clear_text"
             app:boxStrokeColor="@color/blueOnShop"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -75,9 +76,9 @@
 
 
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/textInputLayout2"
+            android:id="@+id/login_campo_senha"
             android:layout_width="0dp"
-            android:layout_height="60dp"
+            android:layout_height="wrap_content"
             android:layout_marginTop="32dp"
             android:hint="Insira sua senha"
             app:endIconMode="password_toggle"
@@ -102,7 +103,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintBottom_toBottomOf="@+id/textView"
-            app:layout_constraintEnd_toEndOf="@+id/textInputLayout2"
+            app:layout_constraintEnd_toEndOf="@+id/login_campo_senha"
             app:layout_constraintTop_toTopOf="@+id/textView" />
 
         <TextView
@@ -111,8 +112,8 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:text="Lembrar de mim"
-            app:layout_constraintStart_toStartOf="@+id/textInputLayout2"
-            app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />
+            app:layout_constraintStart_toStartOf="@+id/login_campo_senha"
+            app:layout_constraintTop_toBottomOf="@+id/login_campo_senha" />
 
         <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
             android:id="@+id/bt_efetuar_login"
