--- a/app/src/main/res/layout/modelo_item_bloco.xml
+++ b/app/src/main/res/layout/modelo_item_bloco.xml
@@ -19,7 +19,7 @@
             android:layout_height="match_parent">
 
             <ImageView
-                android:id="@+id/imageView6"
+                android:id="@+id/imagem_produto_bloco"
                 android:layout_width="0dp"
                 android:layout_height="165dp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -36,8 +36,8 @@
                 android:text="Cadeira Flexform"
                 android:textColor="@color/black"
                 android:textStyle="bold"
-                app:layout_constraintStart_toStartOf="@+id/imageView6"
-                app:layout_constraintTop_toBottomOf="@+id/imageView6" />
+                app:layout_constraintStart_toStartOf="@+id/imagem_produto_bloco"
+                app:layout_constraintTop_toBottomOf="@+id/imagem_produto_bloco" />
 
             <TextView
                 android:id="@+id/textView8"
