--- a/app/src/main/res/layout/cadastro_fragment.xml
+++ b/app/src/main/res/layout/cadastro_fragment.xml
@@ -202,5 +202,16 @@
             app:layout_constraintTop_toTopOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
+    <ProgressBar
+        android:id="@+id/loading_cadastro"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
+        android:visibility="gone"
+        app:layout_constraintEnd_toEndOf="@+id/bt_cadastrar"
+        app:layout_constraintStart_toStartOf="@+id/bt_cadastrar"
+        app:layout_constraintTop_toBottomOf="@+id/bt_cadastrar" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
