--- a/app/src/main/res/layout/cadastro_fragment.xml
+++ b/app/src/main/res/layout/cadastro_fragment.xml
@@ -36,7 +36,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/white"
-            android:inputType="textEmailAddress" />
+            android:fontFamily="@font/poppins"
+            android:inputType="textEmailAddress"
+            android:textSize="18sp" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -56,6 +58,7 @@
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:backgroundTint="#FFFFFF"
+            android:fontFamily="@font/poppins"
             android:inputType="textPassword"
             android:textSize="18sp">
 
@@ -79,6 +82,7 @@
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:backgroundTint="#FFFFFF"
+            android:fontFamily="@font/poppins"
             android:inputType="textPassword"
             android:textSize="18sp">
 
@@ -158,6 +162,7 @@
         android:layout_width="250dp"
         android:layout_height="50dp"
         android:layout_marginTop="32dp"
+        android:fontFamily="@font/poppins"
         android:text="CADASTRAR"
         android:textAlignment="center"
         android:textColor="@color/white"
@@ -191,6 +196,7 @@
             android:id="@+id/textView5"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/poppins"
             android:text="CADASTRO"
             android:textColor="@color/white"
             android:textSize="20sp"
