--- a/app/src/main/res/layout/favorito_fragment.xml
+++ b/app/src/main/res/layout/favorito_fragment.xml
@@ -30,6 +30,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
+            android:fontFamily="@font/poppins"
             android:text="Favoritos"
             android:textColor="@color/grayOnShop"
             android:textSize="24sp"
@@ -63,6 +64,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="32dp"
+            android:fontFamily="@font/poppins"
             android:text="Você não adicionou produtos"
             android:textColor="@color/black"
             android:textSize="24sp"
@@ -76,6 +78,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="44dp"
+            android:fontFamily="@font/poppins"
             android:text="Explore a página de destaques e adicione produtos ao seu carrinho"
             android:textAlignment="center"
             android:textColor="@color/grayOnShop"
@@ -89,6 +92,7 @@
             android:layout_width="250dp"
             android:layout_height="50dp"
             android:layout_marginBottom="36dp"
+            android:fontFamily="@font/poppins"
             android:text="Explorar produtos"
             android:textAlignment="center"
             android:textColor="@color/white"
