--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -32,6 +32,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="64dp"
+            android:fontFamily="@font/poppins"
             android:text="Destaques"
             android:textColor="@color/grayOnShop"
             android:textSize="24sp"
