--- a/app/src/main/res/layout/modelo_item_lista.xml
+++ b/app/src/main/res/layout/modelo_item_lista.xml
@@ -31,6 +31,7 @@
                 android:id="@+id/nome_produto_lista"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:fontFamily="@font/poppins"
                 android:text="Cadeira Flexform"
                 android:textColor="@color/black"
                 android:textSize="14sp"
@@ -42,24 +43,26 @@
                 android:id="@+id/preco_produto_lista"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
+                android:layout_marginTop="28dp"
+                android:fontFamily="@font/poppins"
                 android:text="R$ 675,00"
                 android:textColor="@color/blueOnShop"
                 android:textStyle="bold"
-                app:layout_constraintStart_toStartOf="@+id/nome_produto_lista"
-                app:layout_constraintTop_toBottomOf="@+id/nome_produto_lista" />
+                app:layout_constraintStart_toStartOf="@+id/descricao_produto_lista"
+                app:layout_constraintTop_toBottomOf="@+id/descricao_produto_lista" />
 
             <TextView
                 android:id="@+id/descricao_produto_lista"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:layout_marginEnd="20dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginEnd="8dp"
+                android:fontFamily="@font/poppins"
                 android:text="Melhor custo benefício"
                 android:textSize="14sp"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="@+id/preco_produto_lista"
-                app:layout_constraintTop_toBottomOf="@+id/preco_produto_lista" />
+                app:layout_constraintStart_toStartOf="@+id/nome_produto_lista"
+                app:layout_constraintTop_toBottomOf="@+id/nome_produto_lista" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 </androidx.constraintlayout.widget.ConstraintLayout>
