Início implementação room.

--- a/app/src/main/res/layout/favorito_fragment.xml
+++ b/app/src/main/res/layout/favorito_fragment.xml
@@ -102,4 +102,14 @@
             app:layout_constraintStart_toStartOf="@+id/textView11" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerview_produtos_favoritos"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="@+id/constraintLayout3"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar2" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
