--- a/app/src/main/res/layout/modelo_produto_favorito.xml
+++ b/app/src/main/res/layout/modelo_produto_favorito.xml
@@ -3,12 +3,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#FFEB3B">
+    android:layout_height="wrap_content">
 
     <androidx.cardview.widget.CardView
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -30,15 +31,27 @@
 
             <TextView
                 android:id="@+id/modelo_favorito_produto_nome"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
                 android:fontFamily="@font/poppins"
                 android:text="Nome do produto"
+                android:textColor="@color/grayOnShop"
                 android:textSize="20sp"
                 app:layout_constraintBottom_toBottomOf="@+id/modelo_produto_favorito_imagem"
+                app:layout_constraintEnd_toStartOf="@+id/bt_item_favoritar"
                 app:layout_constraintStart_toEndOf="@+id/modelo_produto_favorito_imagem"
                 app:layout_constraintTop_toTopOf="@+id/modelo_produto_favorito_imagem" />
+
+            <ImageView
+                android:id="@+id/bt_item_favoritar"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_marginEnd="16dp"
+                app:layout_constraintBottom_toBottomOf="@+id/modelo_favorito_produto_nome"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/modelo_favorito_produto_nome"
+                app:srcCompat="@drawable/ic_favoritar" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 </androidx.constraintlayout.widget.ConstraintLayout>
