--- a/app/src/main/res/layout/finalizar_compras_fragment.xml
+++ b/app/src/main/res/layout/finalizar_compras_fragment.xml
@@ -54,7 +54,9 @@
             android:id="@+id/textView10"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
             android:layout_marginTop="32dp"
+            android:layout_marginEnd="16dp"
             android:fontFamily="@font/poppins"
             android:text="Compra finalizada com sucesso"
             android:textColor="@color/black"
@@ -84,7 +86,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:fontFamily="@font/poppins"
-            android:text="OnShop, fique de olhos em suas compras."
+            android:text="OnShop, fique ligado em suas compras."
             android:textAlignment="center"
             android:textColor="@color/blueOnShop"
             android:textSize="18sp"
