--- a/app/src/main/res/navigation/home_nav_graph.xml
+++ b/app/src/main/res/navigation/home_nav_graph.xml
@@ -17,6 +17,9 @@
         <action
             android:id="@+id/action_carrinhoFragment_to_homeFragment"
             app:destination="@id/homeFragment" />
+        <action
+            android:id="@+id/action_carrinhoFragment_to_pagamentoActivity"
+            app:destination="@id/pagamentoActivity" />
     </fragment>
     <fragment
         android:id="@+id/favoritoFragment"
@@ -27,4 +30,9 @@
             android:id="@+id/action_favoritoFragment_to_homeFragment"
             app:destination="@id/homeFragment" />
     </fragment>
+    <activity
+        android:id="@+id/pagamentoActivity"
+        android:name="com.example.onshop.activities.PagamentoActivity"
+        android:label="pagamento_activity"
+        tools:layout="@layout/pagamento_activity" />
 </navigation>
